last fix to about section (letter spacing)

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1111,7 +1111,7 @@ body {
           background-size: 210% !important;
           p {
             font-size: 1rem !important;
-            letter-spacing: 1.3px !important;
+            letter-spacing: 1.2px !important;
             text-shadow: 0px 0.5px 0px hsl(28, 32%, 16%),
               0px -0.5px 0px rgba(0, 0, 0, 1);
           }
